WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
86840
[EFL][DRT] LayoutTestController's setCacheModel() implementation
https://bugs.webkit.org/show_bug.cgi?id=86840
Summary
[EFL][DRT] LayoutTestController's setCacheModel() implementation
Mikhail Pozdnyakov
Reported
2012-05-18 04:16:46 PDT
WebKit EFL needs support of different cache models so that the client has opportunity to set the appropriate one providing desired memory usage or document load speed. Also it will enable LayoutTestController's setCacheModel() function and hence unskip fast/dom/HTMLScriptElement/nested-execution.html testcase.
Attachments
patch
(7.37 KB, patch)
2012-05-21 10:16 PDT
,
Mikhail Pozdnyakov
ossy
: review+
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
to be landed.
(7.35 KB, patch)
2012-05-24 01:51 PDT
,
Mikhail Pozdnyakov
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
to be landed. (Added reviewer name to changelog)
(7.36 KB, patch)
2012-05-24 02:52 PDT
,
Mikhail Pozdnyakov
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
to be landed. (trying again :( )
(7.36 KB, patch)
2012-05-24 04:02 PDT
,
Mikhail Pozdnyakov
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Mikhail Pozdnyakov
Comment 1
2012-05-20 03:36:36 PDT
(In reply to
comment #0
)
> WebKit EFL needs support of different cache models so that the client has opportunity to set the appropriate one providing desired memory usage or document load speed. > Also it will enable LayoutTestController's setCacheModel() function and hence unskip fast/dom/HTMLScriptElement/nested-execution.html testcase.
Choosing of a cache model would lead to 3 web core function invokes: 1) memoryCache()->setCapacities(); 2) memoryCache()->setDeadDecodedDataDeletionInterval(); 3) pageCache()->setCapacity(); 1 - is already exported in ewk_settings (ewk_settings_object_cache_capacity_set) 2 - is not exported, and no other port is exporting it explicitly, so would rather put it to DRT support yet just to make tests pass (could be exported later if needed). 3 - is to be exported as clients should be interested in setting page cache capacity (will file a separate bug for it).
Mikhail Pozdnyakov
Comment 2
2012-05-21 10:16:31 PDT
Created
attachment 143056
[details]
patch
Raphael Kubo da Costa (:rakuco)
Comment 3
2012-05-23 08:27:27 PDT
Comment on
attachment 143056
[details]
patch Don't you need to reset these settings after each test?
Mikhail Pozdnyakov
Comment 4
2012-05-23 11:40:14 PDT
(In reply to
comment #3
)
> (From update of
attachment 143056
[details]
) > Don't you need to reset these settings after each test?
memoryCache()->setDeadDecodedDataDeletionInterval(); is reset with DumpRenderTreeSupportEfl::setDeadDecodedDataDeletionInterval(0); The rest is reset with ewk_settings_memory_cache_clear(); that was already invoked.
Raphael Kubo da Costa (:rakuco)
Comment 5
2012-05-23 11:59:59 PDT
OK, then I guess it looks fine.
Csaba Osztrogonác
Comment 6
2012-05-24 01:09:34 PDT
Comment on
attachment 143056
[details]
patch rs=me
WebKit Review Bot
Comment 7
2012-05-24 01:20:36 PDT
Comment on
attachment 143056
[details]
patch Rejecting
attachment 143056
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: pportEfl.h patching file Tools/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file Tools/DumpRenderTree/efl/DumpRenderTreeChrome.cpp Hunk #1 FAILED at 257. 1 out of 1 hunk FAILED -- saving rejects to file Tools/DumpRenderTree/efl/DumpRenderTreeChrome.cpp.rej patching file Tools/DumpRenderTree/efl/LayoutTestControllerEfl.cpp Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', u'--force', u'--reviewer', u'Csaba Oszt..." exit_code: 1 cwd: /mnt/git/webkit-commit-queue/ Full output:
http://queues.webkit.org/results/12800104
Mikhail Pozdnyakov
Comment 8
2012-05-24 01:51:50 PDT
Created
attachment 143761
[details]
to be landed.
WebKit Review Bot
Comment 9
2012-05-24 02:27:08 PDT
Comment on
attachment 143761
[details]
to be landed. Rejecting
attachment 143761
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/LayoutTests/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output:
http://queues.webkit.org/results/12791153
Gyuyoung Kim
Comment 10
2012-05-24 02:30:36 PDT
Comment on
attachment 143761
[details]
to be landed. View in context:
https://bugs.webkit.org/attachment.cgi?id=143761&action=review
> LayoutTests/ChangeLog:6 > + Reviewed by NOBODY (OOPS!).
Change NOBODY with reviewer name.
Mikhail Pozdnyakov
Comment 11
2012-05-24 02:52:33 PDT
Created
attachment 143773
[details]
to be landed. (Added reviewer name to changelog)
WebKit Review Bot
Comment 12
2012-05-24 03:31:30 PDT
Comment on
attachment 143773
[details]
to be landed. (Added reviewer name to changelog) Rejecting
attachment 143773
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 Csaba Osztrogonac found in /mnt/git/webkit-commit-queue/LayoutTests/ChangeLog does not appear to be a valid reviewer according to committers.py. ERROR: /mnt/git/webkit-commit-queue/LayoutTests/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output:
http://queues.webkit.org/results/12799134
Mikhail Pozdnyakov
Comment 13
2012-05-24 04:02:38 PDT
Created
attachment 143780
[details]
to be landed. (trying again :( )
WebKit Review Bot
Comment 14
2012-05-24 07:20:25 PDT
Comment on
attachment 143780
[details]
to be landed. (trying again :( ) Clearing flags on attachment: 143780 Committed
r118366
: <
http://trac.webkit.org/changeset/118366
>
WebKit Review Bot
Comment 15
2012-05-24 07:20:30 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug