[EFL][DRT] LayoutTestController's setCacheModel() implementation https://bugs.webkit.org/show_bug.cgi?id=86840

Patch by Mikhail Pozdnyakov <mikhail.pozdnyakov@intel.com> on 2012-05-24
Reviewed by Csaba Osztrogonác.

Source/WebKit/efl:

* WebCoreSupport/DumpRenderTreeSupportEfl.cpp:
(DumpRenderTreeSupportEfl::setDeadDecodedDataDeletionInterval): Aux wrapper function for DRT.
* WebCoreSupport/DumpRenderTreeSupportEfl.h:

Tools:

* DumpRenderTree/efl/DumpRenderTreeChrome.cpp:
(DumpRenderTreeChrome::resetDefaultsToConsistentValues): Reset dead decoded data deletion interval.
* DumpRenderTree/efl/LayoutTestControllerEfl.cpp:
(LayoutTestController::setCacheModel): Implementation added.

LayoutTests:

* platform/efl/Skipped: Unskipped fast/dom/HTMLScriptElement/nested-execution.html.

Canonical link: https://commits.webkit.org/105134@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118366 268f45cc-cd09-0410-ab3c-d52691b4dbfc